// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`работа Mobile 1`] = `
<div>
  <hr />
  <button
    onClick={[Function]}
  >
    ВСЕ
  </button>
  <button
    onClick={[Function]}
  >
    Активные
  </button>
  <button
    onClick={[Function]}
  >
    Заблокированные
  </button>
  <hr />
  <table>
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="ClientActive"
        >
          Активен
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Петр
        </td>
        <td>
          Петрович
        </td>
        <td>
          250
        </td>
        <td
          className="ClientActive"
        >
          Активен
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          180
        </td>
        <td
          className="ClientActive"
        >
          Активен
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Суворов
        </td>
        <td>
          Герасим
        </td>
        <td>
          Филиппович
        </td>
        <td>
          -220
        </td>
        <td
          className="ClientBlocked"
        >
          Заблокирован
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <button
    onClick={[Function]}
  >
    Добавить клиента
  </button>
</div>
`;

exports[`работа Mobile 2`] = `
<div>
  <hr />
  <button
    onClick={[Function]}
  >
    ВСЕ
  </button>
  <button
    onClick={[Function]}
  >
    Активные
  </button>
  <button
    onClick={[Function]}
  >
    Заблокированные
  </button>
  <hr />
  <table>
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="ClientActive"
        >
          Активен
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Петр
        </td>
        <td>
          Петрович
        </td>
        <td>
          250
        </td>
        <td
          className="ClientActive"
        >
          Активен
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          180
        </td>
        <td
          className="ClientActive"
        >
          Активен
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Суворов
        </td>
        <td>
          Герасим
        </td>
        <td>
          Филиппович
        </td>
        <td>
          -220
        </td>
        <td
          className="ClientBlocked"
        >
          Заблокирован
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <button
    onClick={[Function]}
  >
    Добавить клиента
  </button>
</div>
`;

exports[`работа Mobile 3`] = `
<div>
  <hr />
  <button
    onClick={[Function]}
  >
    ВСЕ
  </button>
  <button
    onClick={[Function]}
  >
    Активные
  </button>
  <button
    onClick={[Function]}
  >
    Заблокированные
  </button>
  <hr />
  <table>
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="ClientActive"
        >
          Активен
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Петр
        </td>
        <td>
          Петрович
        </td>
        <td>
          250
        </td>
        <td
          className="ClientActive"
        >
          Активен
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          180
        </td>
        <td
          className="ClientActive"
        >
          Активен
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <button
    onClick={[Function]}
  >
    Добавить клиента
  </button>
</div>
`;

exports[`работа Mobile 4`] = `
<div>
  <hr />
  <button
    onClick={[Function]}
  >
    ВСЕ
  </button>
  <button
    onClick={[Function]}
  >
    Активные
  </button>
  <button
    onClick={[Function]}
  >
    Заблокированные
  </button>
  <hr />
  <table>
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Суворов
        </td>
        <td>
          Герасим
        </td>
        <td>
          Филиппович
        </td>
        <td>
          -220
        </td>
        <td
          className="ClientBlocked"
        >
          Заблокирован
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <button
    onClick={[Function]}
  >
    Добавить клиента
  </button>
</div>
`;

exports[`работа Mobile 5`] = `
<div>
  <hr />
  <button
    onClick={[Function]}
  >
    ВСЕ
  </button>
  <button
    onClick={[Function]}
  >
    Активные
  </button>
  <button
    onClick={[Function]}
  >
    Заблокированные
  </button>
  <hr />
  <table>
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Суворов
        </td>
        <td>
          Герасим
        </td>
        <td>
          Филиппович
        </td>
        <td>
          -220
        </td>
        <td
          className="ClientBlocked"
        >
          Заблокирован
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <div>
    <h3>
      Добавление нового клиента
    </h3>
    <div>
      Фамилия: 
      <input
        data="surname"
        onChange={[Function]}
        value=""
      />
    </div>
    <div>
      Имя: 
      <input
        data="name"
        onChange={[Function]}
        value=""
      />
    </div>
    <div>
      Отчество: 
      <input
        data="secName"
        onChange={[Function]}
        value=""
      />
    </div>
    <div>
      Баланс: 
      <input
        data="balance"
        onChange={[Function]}
        value=""
      />
    </div>
    <button
      onClick={[Function]}
    >
      Сохранить
    </button>
    <button
      onClick={[Function]}
    >
      Отмена
    </button>
  </div>
</div>
`;

exports[`работа Mobile 6`] = `
<div>
  <hr />
  <button
    onClick={[Function]}
  >
    ВСЕ
  </button>
  <button
    onClick={[Function]}
  >
    Активные
  </button>
  <button
    onClick={[Function]}
  >
    Заблокированные
  </button>
  <hr />
  <table>
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Суворов
        </td>
        <td>
          Герасим
        </td>
        <td>
          Филиппович
        </td>
        <td>
          -220
        </td>
        <td
          className="ClientBlocked"
        >
          Заблокирован
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
      <tr>
        <td>
          
        </td>
        <td>
          
        </td>
        <td>
          
        </td>
        <td>
          
        </td>
        <td
          className="ClientBlocked"
        >
          Заблокирован
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Редактировть
          </button>
        </td>
        <td>
          <button
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <button
    onClick={[Function]}
  >
    Добавить клиента
  </button>
</div>
`;
